# actix-web-posts-api

./: Cargo.toml  Dockerfile  Dockerfile.hot  Dockerfile.test  Makefile  README.md  docker-compose-hot.yaml  docker-compose-test.yaml  docker-compose.yaml
migrations/2020-12-24-210236_create_posts_table/: up.sql
migrations/2020-12-26-220321_create_articles_table/: up.sql
src/: main.rs  models.rs  schema.rs
src/actors/: db.rs
src/db_utils/: mod.rs
